// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs Component > Snapshots > should match snapshot with full tabs 1`] = `
<div
  data-orientation="horizontal"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-:r2a:-content-tab1"
      aria-selected="true"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      id="radix-:r2a:-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="radix-:r2a:-content-tab2"
      aria-selected="false"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      id="radix-:r2a:-trigger-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="radix-:r2a:-content-tab3"
      aria-selected="false"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      id="radix-:r2a:-trigger-tab3"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    aria-labelledby="radix-:r2a:-trigger-tab1"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    data-orientation="horizontal"
    data-state="active"
    id="radix-:r2a:-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    Content 1
  </div>
  <div
    aria-labelledby="radix-:r2a:-trigger-tab2"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    data-orientation="horizontal"
    data-state="inactive"
    hidden=""
    id="radix-:r2a:-content-tab2"
    role="tabpanel"
    tabindex="0"
  />
  <div
    aria-labelledby="radix-:r2a:-trigger-tab3"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    data-orientation="horizontal"
    data-state="inactive"
    hidden=""
    id="radix-:r2a:-content-tab3"
    role="tabpanel"
    tabindex="0"
  />
</div>
`;

exports[`Tabs Component > Snapshots > should match snapshot with minimal tabs 1`] = `
<div
  data-orientation="horizontal"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-:r28:-content-tab1"
      aria-selected="true"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      id="radix-:r28:-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    aria-labelledby="radix-:r28:-trigger-tab1"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    data-orientation="horizontal"
    data-state="active"
    id="radix-:r28:-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    Content 1
  </div>
</div>
`;
